DATA-46374: fix PR issues